--- a/manifest_v3_Firefox.json
+++ b/manifest_v3_Firefox.json
@@ -44,9 +44,15 @@
         "32": "images/icon.png"
     },
     "background"         : {
-        "service_worker"  :   "javascript/background.js"
+        "page"            :   "background.html"
 
     },
+"browser_specific_settings": {
+  "gecko": {
+    "id": "addon@remotetabs.com",
+    "strict_min_version": "42.0"
+  }
+},
     "action"             : {
         "default_title"   : "OHR checker",
         "default_popup"   : "popup.html",
